--- a/App_Code/HelperDersTakip.cshtml
+++ b/App_Code/HelperDersTakip.cshtml
@@ -33,7 +33,7 @@
                 <tr>
                     <td>
                        
-                           @HelperProfil.KucukKunye(takipci.UserID)
+                           @HelperProfil.KucukKunye(takipci.UserID,dil)
 
                     
                     </td>
