--- a/Ders/Liste.cshtml
+++ b/Ders/Liste.cshtml
@@ -109,7 +109,7 @@
 
                             
                         </td>
-                    <td>@HelperProfil.KucukKunye(ders.UserID)</td>
+                    <td>@HelperProfil.KucukKunye(ders.UserID,dil)</td>
                      @if (roller.Contains("Ogretici")) {
                     <td><h4><label class="label label-orange">@ders.KabulKodu</label></h4></td>
                     }
