--- a/Dosya/Ayarlar.cshtml
+++ b/Dosya/Ayarlar.cshtml
@@ -79,7 +79,7 @@
                 <td><strong>@Resources.Resource.lblSahibi</strong></td>         
             </tr>
             <tr>
-                <td>@HelperProfil.KucukKunye(queryDosya.UserID) </td>
+                <td>@HelperProfil.KucukKunye(queryDosya.UserID,dil) </td>
             </tr>
             <tr>
                 <td><strong>@Resources.Resource.lblBoyut</strong></td>         
