--- a/Odev/Goster.cshtml
+++ b/Odev/Goster.cshtml
@@ -121,7 +121,7 @@
             </tr>
             
             <tr>
-                <td>@HelperProfil.KucukKunye(queryDers.UserID)</td>
+                <td>@HelperProfil.KucukKunye(queryDers.UserID,dil)</td>
             </tr>
 
             <tr>
