--- a/Odev/OdevGonderileri.cshtml
+++ b/Odev/OdevGonderileri.cshtml
@@ -75,7 +75,7 @@
                        {
                         <tr>
                            <td>
-                                @HelperProfil.KucukKunye(ogrenci.userID)
+                                @HelperProfil.KucukKunye(ogrenci.userID,dil)
                            </td>   
                         
                             <td>
