--- a/Odev/OdevGonderisi.cshtml
+++ b/Odev/OdevGonderisi.cshtml
@@ -90,7 +90,7 @@
                     <td><strong>@Resources.Resource.lblOdeviGonderen</strong></td>         
                 </tr>
                 <tr>
-                    <td>@HelperProfil.KucukKunye(queryOdevGonderisi.UserID) </td>
+                    <td>@HelperProfil.KucukKunye(queryOdevGonderisi.UserID,dil) </td>
                 </tr>
 
                  @if (queryOdevGonderisi.Aciklama!=null)
