--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -152,7 +152,7 @@
                     		
                     <td>		
                        		
-                        @HelperProfil.KucukKunye(Convert.ToInt32(item.UserID))		
+                        @HelperProfil.KucukKunye(Convert.ToInt32(item.UserID),dil)		
                       @if (dil=="tr")		
                       {		
                         <a href="@item.URL"> @item.UI_DersAdi @Resources.Resource.lblDersinde </a>		
