--- a/Shared/_LayoutAdmin.cshtml
+++ b/Shared/_LayoutAdmin.cshtml
@@ -51,7 +51,7 @@
 
 <body>
     <div id="divAktifKullaniciKucukKunye" class="hide">
-      @HelperProfil.KucukKunye(WebSecurity.CurrentUserId)
+      @HelperProfil.KucukKunye(WebSecurity.CurrentUserId,dil)
      </div>
     <div id="wrapper">
        
@@ -94,7 +94,7 @@
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
                        <li class="text-center">
-                            <a href="#">@HelperProfil.KucukKunye(WebSecurity.CurrentUserId)</a>
+                            <a href="#">@HelperProfil.KucukKunye(WebSecurity.CurrentUserId,dil)</a>
                            
                         </li>
                         <li>
