--- a/Ders/Ayarlar.cshtml
+++ b/Ders/Ayarlar.cshtml
@@ -79,7 +79,7 @@
             </tr>
             
             <tr>
-                <td>@HelperProfil.KucukKunye(queryDers.UserID)</td>
+                <td>@HelperProfil.KucukKunye(queryDers.UserID,dil)</td>
             </tr>
 
             <tr>
