--- a/Bildirim/Default.cshtml
+++ b/Bildirim/Default.cshtml
@@ -64,7 +64,7 @@
                 
                 <tr>
                    
-                    <td>@HelperProfil.YaziliKunye(item.EylemiYapanUserID) 
+                    <td>@HelperProfil.YaziliKunye(item.EylemiYapanUserID,dil) 
                         @if (dil=="tr")
                         {
                             <a href="@Href("~/Bildirim/Git?BildirimID=" + item.BildirimID)">
