--- a/Ders/Default.cshtml
+++ b/Ders/Default.cshtml
@@ -203,7 +203,7 @@
                            <i class="fa @item.Ikon fa-fw fa-2x"></i>
                            @if (item.UserID!=null)
                            {
-                            @HelperProfil.YaziliKunye(item.UserID)
+                            @HelperProfil.YaziliKunye(item.UserID,dil)
                            }
                        </span>
                         @if (item.DersID!=null) {
