--- a/Hesap/Profil.cshtml
+++ b/Hesap/Profil.cshtml
@@ -71,7 +71,7 @@
                                         <img src="http://bulutders.blob.core.windows.net/profilresimleri/@queryUser.Avatar" alt="" class="header-avatar" />
                                     </div>
                                     <div class="col-lg-5 col-md-8 col-sm-12 profile-info">
-                                        <div class="header-fullname">@HelperProfil.YaziliKunye(Convert.ToInt32(userID))
+                                        <div class="header-fullname">@HelperProfil.YaziliKunye(Convert.ToInt32(userID),dil)
                                         
                                         </div>
 
