--- a/Admin/Kullanicilar.cshtml
+++ b/Admin/Kullanicilar.cshtml
@@ -102,7 +102,7 @@
                             <select class="form-control" id="cmbUnvan" name="UnvanID">
                                @foreach (var unvan in queryUnvanlar)
                                     {
-                                        <option value="@unvan.UnvanID">@unvan.Unvan</option>
+                                        <option value="@unvan.UnvanID">@unvan.Unvantr</option>
                                     }
                             </select>
                             <label>Ad:</label>
