--- a/Panel/YDefault.cshtml
+++ b/Panel/YDefault.cshtml
@@ -109,98 +109,64 @@
                      
                        }
                       @if (roller.Contains("Ogrenci"))                             {                            <ul class="dropdown-menu" aria-labelledby="dLabel">                                 <li><a href="#" data-toggle="modal" data-target="#modalDerseKatil" title="Erişim Kodu Kullanarak Bir Ders Sayfasını Takip Et" data-toggle="tooltip" data-placement="top"><i class="fa fa-plus-circle"></i> Erişim Kodu Kullanarak Bir Ders Sayfasını Takip Et </a></li>
-                                 <li><a href="#" id="btnDerseKatilDersAra"><i class="fa fa-search"></i> Ders Sayfası Ara </a></li>                            </ul>                            }                    </div>                       <br><br>
-    <div class="widget">
-               <div class="widget-header bordered-top bordered-blueberry">
-                                            
-                     <span class="widget-caption"><strong>@Resources.Resource.lblAktiviteler</strong></span>
-                      <div class="widget-buttons">
-
-                                              <a href="#" data-toggle="collapse">
-                                                    <i class="fa fa-minus"></i>
-                                                </a>
-                                              
-                                                <a href="#" data-toggle="maximize">
-                                                    <i class="fa fa-expand"></i>
-                                                </a>
-                                               
-                                            </div><!--Widget Buttons-->                     
-                </div><!--Widget Header-->
-               <div class="widget-body">                   <div class="row">                    <div class="col-sm-12 col-lg-12 col-md-12">                     <table class="table table-hover" id="tabloAktiviteler" >		
-                           <thead>		
-                                <tr>		
-                                    <th></th>		
-                                    <th></th>		
-                                   <th></th>		
-                                  <th></th>		
-                   		
-                		
-                                </tr>		
-                            </thead>		
-         <tbody>		
-            @foreach (var item in listeAktiviteler)		
-            {		
-                		
-                <tr>		
-                    <td class="text-center text-@item.Renk"><span>		
-                            <i class="fa @item.Ikon fa-fw fa-2x"></i>  </span>		
-                            <br>		
-                            <h4><i class="fa fa-thumbs-o-up" data-toggle="tooltip" data-placement="top" title="@Resources.Resource.lblBegeniSayisi"></i> <button class="btn btn-link btnBegenenleriGoster" data-AktiviteID="@item.AktiviteID"> @item.UI_BegeniSayisi </button> </h4>		
-                            <br>		
-                            <h4><i class="fa fa-eye" data-toggle="tooltip" data-placement="top" title="@Resources.Resource.lblGoruntuleyenKisiSayisi"></i><button class="btn btn-link btnGoruntuleyenleriGoster" data-AktiviteID="@item.AktiviteID"> @item.UI_AktiviteOkundu </button></h4>		
-                    </td>		
-                    		
-                    <td>		
-                       		
-                        @HelperProfil.KucukKunye(Convert.ToInt32(item.UserID),dil)		
-                      @if (dil=="tr")		
-                      {		
-                        <a href="@item.URL"> @item.UI_DersAdi @Resources.Resource.lblDersinde </a>		
-                        		
-                        <a href="@item.URL">@Genel.AktiviteEylemindenMetne(item.EylemID,dil) </a>		
-                       }		
-                       else if (dil=="en") 		
-                       {		
-                        		
-                        <a href="@item.URL">@Genel.AktiviteEylemindenMetne(item.EylemID,dil) </a>  		
-                        <a href="@item.URL">in @item.UI_DersAdi </a>		
-                       }		
-                        <br>		                        <br>
-                        @if (item.IlaveMetin!=null) {		
-                            @Html.Raw(item.IlaveMetin)		
-                        }		
-                        		
-                        <br><br>		
-                    @if (item.UI_AktiviteBegendi==0)		
-                      {		
-                        <button type="button" class="btn btn-link btn-xs AktiviteBegen" data-AktiviteID="@item.AktiviteID">		
-                          <i class="fa fa-thumbs-o-up"></i> @Resources.Resource.lblBegen		
-                        </button>		
-                        }		
-                        else		
-                       {		
-                            <button type="button" class="btn btn-link btn-xs AktiviteBegenmektenVazgec" data-AktiviteID="@item.AktiviteID">		
-                          <i class="fa fa-thumbs-o-down"></i> @Resources.Resource.lblBegenmektenVazgec		
-                            </button>		
-                        }		
-		
-                    </td>		
-                    <td class="text-right">@item.UI_GorunenTarih</td><td>		
-                    @if (item.UI_SilmeDugmesi==1)		
-                    {		
-                     <button class="btn btn-danger shiny btnAktiviteSil btn-xs" data-AktiviteID="@item.AktiviteID"><i class="fa fa-remove"></i></button>		
-                    }		
-                    </td>		
-                </tr>		
-            }		
-         </tbody>		
-    </table>                    </div>                   </div>      
-               
-                   <br>
-              <button class="btn btn-info"  id="btnOncekiaktiviteler" data-SonAktiviteID="@sonAktiviteID"> @Resources.Resource.lblDahaOncekiAktiviteleriGor</button><br><br>                              
-                                        </div><!--Widget Body-->
-                                    </div><!--Widget-->
-     
+                                 <li><a href="#" id="btnDerseKatilDersAra"><i class="fa fa-search"></i> Ders Sayfası Ara </a></li>                            </ul>                            }                    </div>                       <br><br>                    
+                    @foreach (var item in listeAktiviteler)		
+                        {		                            <div class="widget bordered-top bordered-palegreen">                                        
+                                       <div class="widget-body">
+                                                <div class="row">
+                                                    <div class="col-lg-10">
+                                                     @HelperProfil.KucukKunye(Convert.ToInt32(item.UserID),dil)
+                                                        @if (dil=="tr")		
+                                                            {		
+                                                                <a href="@item.URL"> @item.UI_DersAdi @Resources.Resource.lblDersinde </a>		
+                                                                <a href="@item.URL">@Genel.AktiviteEylemindenMetne(item.EylemID,dil) </a>		
+                                                            }		
+                                                       else if (dil=="en") 		
+                                                            {		                                                                <a href="@item.URL">@Genel.AktiviteEylemindenMetne(item.EylemID,dil) </a>
+                                                                <a href="@item.URL">in @item.UI_DersAdi </a>
+                        		                            }     
+                                                    
+                                                    </div>
+                                                    <div class="col-lg-2">
+                                                        <span class="pull-right"><small>@item.UI_GorunenTarih</small></span>
+                                                    </div>
+                                                </div>
+                                                <hr>
+                                                <div class="row">
+                                                   
+                                                    <div class="col-lg-12">
+                                                    
+                                                    @if (item.IlaveMetin!=null) {		                                                        @Html.Raw(item.IlaveMetin)
+                                                    }
+                                                   
+                                                    </div>
+                                                </div>
+                                            <hr>
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                       @if (item.UI_AktiviteBegendi==0)		
+                                                           {		
+                                                                <button type="button" class="btn btn-link btn-xs AktiviteBegen" data-AktiviteID="@item.AktiviteID"><i class="fa fa-thumbs-o-up"></i> @Resources.Resource.lblBegen</button>
+                                                           }		
+                                                            else		
+                                                           {		
+                                                                <button type="button" class="btn btn-link btn-xs AktiviteBegenmektenVazgec" data-AktiviteID="@item.AktiviteID"><i class="fa fa-thumbs-o-down"></i> @Resources.Resource.lblBegenmektenVazgec</button>
+                                                            }	
+                                                                <button class="btn btn-link btn-xs btnBegenenleriGoster" data-AktiviteID="@item.AktiviteID">@item.UI_BegeniSayisi Kişi Beğendi </button>
+                                                                <button class="btn btn-link btn-xs btnGoruntuleyenleriGoster" data-AktiviteID="@item.AktiviteID">@item.UI_AktiviteOkundu Kişi Görüntüledi </button>	
+                                                   
+                                                       @if (item.UI_SilmeDugmesi==1)		
+                                                            {		
+                                                                <button class="btn btn-danger pull-right shiny btnAktiviteSil btn-xs" data-AktiviteID="@item.AktiviteID"><i class="fa fa-remove"></i></button>
+                                                            }		
+                                                 </div>
+                                               
+                                            </div>
+                                            
+                                        </div><!--Widget Body-->
+                             </div><!--Widget-->
+                        }		
+
         <br>
     </div>
  
