--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -111,7 +111,7 @@
                       @if (roller.Contains("Ogrenci"))                             {                            <ul class="dropdown-menu" aria-labelledby="dLabel">                                 <li><a href="#" data-toggle="modal" data-target="#modalDerseKatil" title="Erişim Kodu Kullanarak Bir Ders Sayfasını Takip Et" data-toggle="tooltip" data-placement="top"><i class="fa fa-plus-circle"></i> Erişim Kodu Kullanarak Bir Ders Sayfasını Takip Et </a></li>
                                  <li><a href="#" id="btnDerseKatilDersAra"><i class="fa fa-search"></i> Ders Sayfası Ara </a></li>                            </ul>                            }                    </div>                       <br><br>                    <div id="lstAktiviteler">
                     @foreach (var item in listeAktiviteler)		
-                        {		                            <div class="widget bordered-top bordered-palegreen" id="awdgt_@item.AktiviteID">                                        
+                        {		                            <div class="widget bordered-top bordered-blue" id="awdgt_@item.AktiviteID">                                        
                                        <div class="widget-body">
                                                 <div class="row">
                                                     <div class="col-lg-10">
