--- a/Ders/Default.cshtml
+++ b/Ders/Default.cshtml
@@ -19,7 +19,7 @@
 
    if (string.IsNullOrEmpty(liste))
     {
-        liste="pano";
+        liste="aktivite";
     }
     var queryDers=db.QuerySingle("SELECT * FROM Ders WHERE DersID=@0 AND Silindi=0",DersID);
     var queryKullanici=db.QuerySingle("SELECT * FROM Profiles WHERE UserID=@0",WebSecurity.CurrentUserId);
@@ -68,9 +68,62 @@
     IEnumerable<dynamic> queryOdevler=null;
     IEnumerable<dynamic> queryDosyalar=null;
     
+    var sonAktiviteID="";
+    List<Aktivite> listeAktiviteler=new List<Aktivite>();
+    
     if (liste=="aktivite")
      {
-       queryAktiviteler=db.Query("SELECT * FROM Aktivite WHERE Aktivite.DersID=@0 AND Silindi=0 ORDER BY AktiviteID DESC",DersID);
+         queryAktiviteler=db.Query("SELECT TOP 25 * FROM Aktivite WHERE Aktivite.DersID=@0 AND Silindi=0 ORDER BY AktiviteID DESC",DersID);
+                    foreach(var aktivite in queryAktiviteler)
+                        {
+                           Aktivite a=new Aktivite();
+                           a.AktiviteID=aktivite.AktiviteID;
+                           sonAktiviteID=a.AktiviteID.ToString();
+                           a.UserID=aktivite.UserID;
+                           a.DersID=aktivite.DersID;
+                           a.Ikon=aktivite.Ikon;
+                           a.IlaveFoto=aktivite.IlaveFoto;
+                           a.IlaveMetin=aktivite.IlaveMetin;
+                           a.IlaveURL=aktivite.IlaveURL;
+                           a.Metin=aktivite.Metin;
+                           a.Renk=aktivite.Renk;
+                           a.EylemID=aktivite.EylemID;
+                           a.Silindi=aktivite.Silindi;
+                           a.Tarih=aktivite.Tarih;
+                           a.URL=aktivite.URL;
+                           a.UI_BegeniSayisi=db.QueryValue("SELECT count(*) FROM AktiviteBegeni WHERE AktiviteID=@0",aktivite.AktiviteID);
+                           a.UI_AktiviteOkundu=db.QueryValue("SELECT count(*) FROM AktiviteOkunan WHERE AktiviteID=@0",aktivite.AktiviteID);
+                           a.UI_GorunenTarih=Genel.DateLabel(aktivite.Tarih,dil);
+                           var queryAktiviteUser=db.QuerySingle("SELECT * FROM Profiles LEFT JOIN Unvan ON Profiles.UnvanID=Unvan.UnvanID  WHERE userID=@0",aktivite.UserID);
+                           if (aktivite.UserID==WebSecurity.CurrentUserId || dersSahibi)
+                           {
+                               a.UI_SilmeDugmesi=1;
+                           }
+                           else
+                           {
+                               a.UI_SilmeDugmesi=0;
+                           }
+
+                           if (aktivite.DersID!=-1) {
+                             a.UI_DersAdi=db.QueryValue("SELECT DersAdi FROM Ders WHERE DersID=@0",aktivite.DersID);
+                           }
+
+                           if (db.QueryValue("SELECT COUNT(*) FROM AktiviteBegeni WHERE AktiviteID=@0 AND UserID=@1",aktivite.AktiviteID,WebSecurity.CurrentUserId)==0)
+                           {
+                               a.UI_AktiviteBegendi=0;
+                           }
+                           else
+                           {
+                               a.UI_AktiviteBegendi=1;
+                           }
+      
+                           if (db.QueryValue("SELECT COUNT(*) FROM AktiviteOkunan WHERE AktiviteID=@0 AND UserID=@1",aktivite.AktiviteID,WebSecurity.CurrentUserId)==0)
+                           {
+                               db.Execute("INSERT INTO AktiviteOkunan(AktiviteID,UserID) VALUES(@0,@1)",aktivite.AktiviteID,WebSecurity.CurrentUserId);
+                           }
+                           listeAktiviteler.Add(a);
+                        }
+
      }
      else if (liste=="odev")
      {
@@ -169,9 +222,10 @@
                                         <div class="tab-content tabs-flat">
                                        
                                         <ul class="nav nav-pills">
-                                            <li role="presentation" @if (liste=="pano") {<text>class="active"</text>}><a href="@Href("~/Ders/?DersID=")@DersID&Liste=pano"><i class="fa fa-clipboard"></i> @Resources.Resource.lblDersPanosu</a></li>
+                                            <li role="presentation" @if (liste=="aktivite") {<text>class="active"</text>}><a href="@Href("~/Ders/?DersID=")@DersID&Liste=aktivite"><i class="fa fa-home"></i> @Resources.Resource.lblAnasayfa</a></li>
                                             <li role="presentation" @if (liste=="dosya") {<text>class="active"</text>}><a href="@Href("~/Ders/?DersID=")@DersID&Liste=dosya"><i class="fa fa-folder"></i> @Resources.Resource.lblDosyalar</a></li>
                                             <li role="presentation" @if (liste=="odev") {<text>class="active"</text>}><a href="@Href("~/Ders/?DersID=")@DersID&Liste=odev"><i class="fa fa-tasks"></i> @Resources.Resource.lblOdevler</a></li>
+                                            <li role="presentation" @if (liste=="pano") {<text>class="active"</text>}><a href="@Href("~/Ders/?DersID=")@DersID&Liste=pano"><i class="fa fa-clipboard"></i> @Resources.Resource.lblDersPanosu</a></li>
                                             <li role="presentation"><a href="#"><i class="fa fa-comment"></i> @Resources.Resource.lblMesajlasma</a></li>
                                             <li role="presentation" @if (liste=="takipci") {<text>class="active"</text>}><a href="@Href("~/Ders/?DersID=")@DersID&Liste=takipci"><i class="fa fa-user"></i> @Resources.Resource.lblOgrenciler</a></li>
                                         @if (queryDers.UserID==WebSecurity.CurrentUserId)
@@ -186,43 +240,67 @@
            @if (liste=="aktivite")
              {
        
-            <table id="lstAktiviteler" class="table table-hover">
-        <thead>
-            <tr>
-                <th></th>
-               <th></th>
-                
-            </tr>
-        </thead>
-         <tbody>
-            @foreach (var item in queryAktiviteler)
-            {
-                <tr>
-                    <td>
-                       <span class="text-@item.Renk">
-                           <i class="fa @item.Ikon fa-fw fa-2x"></i>
-                           @if (item.UserID!=null)
-                           {
-                            @HelperProfil.YaziliKunye(item.UserID,dil)
-                           }
-                       </span>
-                        @if (item.DersID!=null) {
-                            <a href="@item.URL">
-                               @db.QueryValue("SELECT DersAdi FROM Ders WHERE DersID=@0",item.DersID) @Resources.Resource.lblDersinde
-                            </a>
+              <div id="lstAktiviteler">
+                    @foreach (var item in listeAktiviteler)		
+                        {		                            <div class="widget bordered-top bordered-blue" id="awdgt_@item.AktiviteID">                                        
+                                       <div class="widget-body">
+                                                <div class="row">
+                                                    <div class="col-lg-10">
+                                                     @HelperProfil.KucukKunye(Convert.ToInt32(item.UserID),dil)
+                                                        @if (dil=="tr")		
+                                                            {		
+                                                                <a href="@item.URL"> @item.UI_DersAdi @Resources.Resource.lblDersinde </a>		
+                                                                <a href="@item.URL">@Genel.AktiviteEylemindenMetne(item.EylemID,dil) </a>		
+                                                            }		
+                                                       else if (dil=="en") 		
+                                                            {		                                                                <a href="@item.URL">@Genel.AktiviteEylemindenMetne(item.EylemID,dil) </a>
+                                                                <a href="@item.URL">in @item.UI_DersAdi </a>
+                        		                            }     
+                                                    
+                                                    </div>
+                                                    <div class="col-lg-2">
+                                                        <span class="pull-right"><small>@item.UI_GorunenTarih</small></span>
+                                                    </div>
+                                                </div>
+                                                <hr>
+                                                <div class="row">
+                                                   
+                                                    <div class="col-lg-12">
+                                                    
+                                                    @if (item.IlaveMetin!=null) {		                                                        @Html.Raw(item.IlaveMetin)
+                                                    }
+                                                   
+                                                    </div>
+                                                </div>
+                                            <hr>
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                       @if (item.UI_AktiviteBegendi==0)		
+                                                           {		
+                                                                <button type="button" class="btn btn-link btn-xs AktiviteBegen" data-AktiviteID="@item.AktiviteID"><i class="fa fa-thumbs-o-up"></i> @Resources.Resource.lblBegen</button>
+                                                           }		
+                                                            else		
+                                                           {		
+                                                                <button type="button" class="btn btn-link btn-xs AktiviteBegenmektenVazgec" data-AktiviteID="@item.AktiviteID"><i class="fa fa-thumbs-o-down"></i> @Resources.Resource.lblBegenmektenVazgec</button>
+                                                            }	
+                                                                <button class="btn btn-link btn-xs btnBegenenleriGoster" data-AktiviteID="@item.AktiviteID">@item.UI_BegeniSayisi Kişi Beğendi </button>
+                                                                <button class="btn btn-link btn-xs btnGoruntuleyenleriGoster" data-AktiviteID="@item.AktiviteID">@item.UI_AktiviteOkundu Kişi Görüntüledi </button>	
+                                                   
+                                                       @if (item.UI_SilmeDugmesi==1)		
+                                                            {		
+                                                                <button class="btn btn-danger pull-right shiny btnAktiviteSil btn-xs" data-AktiviteID="@item.AktiviteID"><i class="fa fa-remove"></i></button>
+                                                            }		
+                                                 </div>
+                                               
+                                            </div>
+                                            
+                                        </div><!--Widget Body-->
+                             </div><!--Widget-->
                         }
-                        <a href="@item.URL">   
-                           @item.Metin
-                        </a>
-                    
-                    </td>
-                    <td class="text-right">@Genel.DateLabel(item.Tarih,dil)</td>
-                    
-                </tr>
-            }
-         </tbody>
-    </table>
-       
+                        <br><br>
+                        <button id="btnOncekiaktiviteler" class="btn btn-primary" data-SonAktiviteID="@sonAktiviteID" >@Resources.Resource.lblDahaOncekiAktiviteleriGor</button>
+         
+               </div>
             }
         else if (liste=="takipci")
         {
@@ -461,7 +539,7 @@
         }
                                        
        </div>
-
+           
       
       </div>
                                         }
