--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -103,7 +103,7 @@
                                   </button>
                                                     @if (roller.Contains("Ogretici"))                       {
                        
-                               <ul class="dropdown-menu" aria-labelledby="dLabel">                                                                             <li><a href="#" data-toggle="modal" data-target="#modalDosyaEkle" title="Dosya Paylaş" data-toggle="tooltip" data-placement="top"><i class="fa fa-file fa-fw"></i> Dosya Ekle </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalYeniOdevVer"><i class="fa fa-tasks fa-fw"></i> Ödev Ver </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalYaziEkle"><i class="fa fa-tasks fa-fw"></i> Yazı Paylaş </a></li>                                                                             <li><a href="#" data-toggle="modal" data-target="#modalDersEkle"><i class="fa fa-book fa-fw"></i> Ders Sayfası Oluştur </a></li>                                          </ul>   
+                               <ul class="dropdown-menu" aria-labelledby="dLabel">                                                                             <li><a href="#" data-toggle="modal" data-target="#modalDosyaEkle" title="Dosya Paylaş" data-toggle="tooltip" data-placement="top"><i class="fa fa-file fa-fw"></i> Dosya Ekle </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalYeniOdevVer"><i class="fa fa-tasks fa-fw"></i> Ödev Ver </a></li>                                          <li><a href="#" data-toggle="modal" data-target="#modalYaziEkle"><i class="fa fa-tasks fa-fw"></i> İçerik Paylaş </a></li>                                                                             <li><a href="#" data-toggle="modal" data-target="#modalDersEkle"><i class="fa fa-book fa-fw"></i> Yeni  Bir Ders Sayfası Oluştur </a></li>                                          </ul>   
                        
                        
                      
@@ -199,7 +199,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="modalYaziEkleLabel"> Yazı Paylaş</h4>
+        <h4 class="modal-title" id="modalYaziEkleLabel"> İçerik Paylaş</h4>
       </div>
       <div class="modal-body">
      
@@ -214,7 +214,7 @@
                          }
                         </select>
                        
-                        <label>Yazı</label>
+                        <label>İçerik</label>
                         <div id="yaziEkleYazi"></div>
                         
                     </div>
