--- a/Ajax/Dosya/Yervarmi.cshtml
+++ b/Ajax/Dosya/Yervarmi.cshtml
@@ -7,11 +7,11 @@
      }
    var db=Database.Open("fb1ae");
    var dosyaBoyut=Request["DosyaBoyut"];
-   var queryKullanici=db.QuerySingle("SELECT * FROM Profiles INNER JOIN UyelikTurleri ON Profiles.UyelikTuru=UyelikTurleri.UyelikID WHERE Profiles.userID=@0",WebSecurity.CurrentUserId);
    var toplamDosyaAlani= Convert.ToDouble(db.QueryValue("SELECT ISNULL(SUM(Boyut),0) as Toplam FROM Dosya WHERE UserID=@0 AND Silindi=0",WebSecurity.CurrentUserId)) + Convert.ToDouble(dosyaBoyut);
+   var queryAbonelik=db.QuerySingle("SELECT * FROM Abone INNER JOIN UyelikPaketleri ON Abone.PaketID=UyelikPaketleri.PaketID WHERE Abone.UserID=@0 AND Durum=1",WebSecurity.CurrentUserId);
    db.Close();
     
-    if (toplamDosyaAlani>Convert.ToDouble(queryKullanici.EgitmenDepolamaAlani))
+    if (toplamDosyaAlani>Convert.ToDouble(queryAbonelik.DepolamaAlani))
      {
          Response.StatusCode=502;
          Response.End(); 
