--- a/Hesap/Ayarlar.cshtml
+++ b/Hesap/Ayarlar.cshtml
@@ -166,7 +166,7 @@
          <table class="table table-striped">
          <tr><td></td><td></td><td><strong>@Resources.Resource.lblKullanilan</strong></td><td><strong>@Resources.Resource.lblKota</strong></td></tr>
          <tr><td>@Resources.Resource.lblDepolamaAlani</td><td></td><td><h2>@Genel.StorageLabel(kullanilanDepolamaAlani)</h2></td><td><h2>@Genel.StorageLabel(queryAbonelik.DepolamaAlani)</h2></td></tr>
-         <tr><td>@Resources.Resource.lblDosyaIndirmeKotasi</td><td></td><td><h2>@Genel.StorageLabel(kullanilanBantGenisligi)</h2></td><td><h2>@Genel.StorageLabel(queryAbonelik.OdevDepolamaAlani) / Ay</h2></td></tr>
+         <tr><td>@Resources.Resource.lblDosyaIndirmeKotasi</td><td></td><td><h2>@Genel.StorageLabel(kullanilanBantGenisligi)</h2></td><td><h2>@Genel.StorageLabel(queryAbonelik.Bantgenisligi) / Ay</h2></td></tr>
              
          
          </table>
